tests/compile_fail/body_on_method.stderr
error: Missing `#[require_unsafe_in_bodies]` on the enscoping `trait` or `impl` block.
            
  --> $DIR/body_on_method.rs:10:5
   |
10 |     #[require_unsafe_in_body]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no method named `my_read` found for struct `Foo<()>` in the current scope
  --> $DIR/body_on_method.rs:28:22
   |
5  | / struct Foo<T> (
6  | |     ::core::marker::PhantomData<T>,
7  | | );
   | |__- method `my_read` not found for this
...
28 |           unsafe { foo.my_read(&x) },
   |                        ^^^^^^^ method not found in `Foo<()>`
